--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^16.6.0",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.0",
+    "react-mailchimp-subscribe": "^2.0.2",
     "react-scripts": "2.0.5"
   },
   "scripts": {
